[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38", optional = true }
dhat = { version = "0.3.3", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
itertools = "0.13.0"
regex = "1.11.1"
anyhow = "1.0.94"
rayon = "1.10.0"
num = "0.4.3"
hashbrown = "0.15.2"
priority-queue = "2.1.1"

#[profile.release]
#lto = true
#codegen-units = 1
#debug = true
#opt-level = 3
